# youtube-clone

./: Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
youtube/: db.sqlite3
youtube/accounts/: forms.py  urls.py  views.py
youtube/static/css/: base.css
youtube/templates/: base.html
youtube/videos/: forms.py  imagekit_client.py  models.py  urls.py  views.py
youtube/videos/migrations/: 0001_initial.py
youtube/videos/templates/videos/: channel.html  detail.html  upload.html
youtube/youtube/: asgi.py  settings.py  urls.py  wsgi.py
