[project]
name = "youtube-clone"
version = "0.1.0"
description = "YouTube Clone with Django and ImageKit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "imagekitio>=5.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "whitenoise>=6.6.0",
    "dj-database-url>=2.1.0",
    "psycopg2-binary>=2.9.9",
]
